# ImpHash

./: .gitignore  Cargo.toml  LICENSE  README.md  build-deb.sh  build.rs  support
assets/: imphash.desktop
packaging/: imphash-1.1.1.deb
packaging/imphash-1.1.1/DEBIAN/: control
packaging/imphash-1.1.1/usr/share/doc/imphash/: copyright
packaging/imphash-1.1.1/usr/share/metainfo/: com.imphash.app.metainfo.xml
packaging/imphash-1.1.2/DEBIAN/: control
packaging/imphash-1.1.2/usr/share/metainfo/: com.imphash.app.metainfo.xml
packaging/imphash-1.1.3/DEBIAN/: control
packaging/imphash-1.1.3/usr/share/applications/: com.imphash.app.desktop
packaging/imphash-1.1.3/usr/share/metainfo/: com.imphash.app.metainfo.xml
packaging/imphash-1.1.4/DEBIAN/: control  postinst
packaging/imphash-1.1.4/usr/share/metainfo/: com.imphash.app.metainfo.xml
packaging/imphash-1.1.5/DEBIAN/: control
packaging/imphash-1.1.5/usr/share/metainfo/: com.imphash.app.metainfo.xml
src/: 12.06.2026.14:38main.rs  cache.rs  dedupe.rs  formats.rs  hasher.rs  main.rs  preview.rs  scanner.rs  settings.rs
