[package]
name = "imphash"
version = "1.1.5"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
gdk-pixbuf = "0.20"
glib = "0.20"
image = "0.25.10"
walkdir = "2"
rayon = "1"
anyhow = "1"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdq-rs = { version = "1.0", optional = true }
kamadak-exif = "0.5"
chrono = "0.4"

[build-dependencies]
chrono = "0.4"

[features]
default = []
pdq = ["dep:pdq-rs"]
